[gd_scene load_steps=6 format=3]

[ext_resource type="Texture2D" uid="uid://ds7jdxfiq3mm5" path="res://images/Enemy.png" id="1"]
[ext_resource type="Script" path="res://scenes/Enemy/Enemy.gd" id="2"]
[ext_resource type="Script" path="res://scenes/Ship/BulletSpawner.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://ryxih3n45dht" path="res://scenes/Bullet/Bullet.tscn" id="4"]
[ext_resource type="Script" path="res://scenes/Ship/Mover.gd" id="5"]

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Enemy" type="Sprite2D" parent="."]
texture = ExtResource( 1 )

[node name="BulletDetector" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BulletDetector"]
polygon = PackedVector2Array( 0, -10, 10, 10, 0, 10, -10, 10 )

[node name="BulletSpawner" type="Node2D" parent="."]
position = Vector2( 0, -16 )
script = ExtResource( 3 )
bullet_scene = ExtResource( 4 )

[node name="ReloadTimer" type="Timer" parent="BulletSpawner"]
wait_time = 0.825
autostart = true

[node name="Mover" type="Node2D" parent="."]
script = ExtResource( 5 )

[connection signal="area_entered" from="BulletDetector" to="." method="_on_BulletDetector_area_entered"]
[connection signal="body_entered" from="BulletDetector" to="." method="_on_BulletDetector_body_entered"]
[connection signal="timeout" from="BulletSpawner/ReloadTimer" to="." method="_on_Timer_timeout"]
